# phone

./: .gitignore  BUGS.md  LICENSE  README.md  TODO.md  asoundrc  bootconfig.txt  csv_to_wav.py  dial.py  dontnameyourfilespidev.py  genericstereoaudiocodec.dts  parse_dtmf.py  phoneodeo.dts  plot_wav.py  pwm.py  ring.py  shk.py  snow.sal  spectrogram.py  spi.py  trypigpio.py  udp_server.py  wav.py
.github/workflows/: phreakme.yml
asterisk/: DOCKER.md  Dockerfile  asterisk.service  extensions.conf  pjsip.conf
audio_samples/: wav_cb.py
certbot/: renew.py
deploy/: add_ip.sh
deploy/certbot/: renew.py  renew.sh
driver/: .Module.symvers.cmd  .modules.order.cmd  .phoneodeo_mod.ko.cmd  .phoneodeo_mod.mod.cmd  .phoneodeo_mod.mod.o.cmd  .phoneodeo_mod.o.cmd  Makefile  modules.order  phoneodeo_mod.c  phoneodeo_mod.ko.xz  phoneodeo_mod.mod.c
goertzel/: Cargo.toml  Cross.toml  Dockerfile.rasppi  asoundrc  build.rs  phreak.service  phreak.timer  pulse_dial.sh
goertzel/.cargo/: config.toml
goertzel/alsa-sys/: build.rs
goertzel/csvs/: 20240919T055026_shorttaper.wav.csv  20240919T060614_goodloud.wav.csv  20240919T062656_noisybg.wav.csv  20240919T062759_out.wav.csv  20240919T231316_out.wav.csv  20240919T231350_out.wav.csv  20240919T231409_talking.wav.csv  20240919T231421_preambletalking.wav.csv  20240919T231446_moretalking.wav.csv  20240920T215304_out.wav.csv  20241619T051620_out.wav.csv  20243117T040937_out.wav.csv
goertzel/lib/arm-unknown-linux-gnueabihf/: libasound.so.2.0.0
goertzel/src/: asyncutil.rs  audio.rs  contacts.rs  deco.rs  dtmf.rs  hook.rs  lib.rs  main.rs  nettest.rs  phone.rs  pulse.rs  tone.rs
goertzel/src/hook/: mod.rs  notpi.rs  rpi.rs  shk.rs
goertzel/src/ring/: mod.rs  notpi.rs  rpi.rs
goertzel/src/rtp/: socket.rs
goertzel/src/sip/: mod.rs  sip.rs  socket.rs  tlssocket.rs
heyletswritesomemorehtml/: index.html
itsjusthtml/: index.html
phone/: phone.kicad_prl  phone.kicad_pro  phone.kicad_sch
phone/phone_pcb/: _autosave-phone_pcb.kicad_sch  phone_pcb.csv  phone_pcb.kicad_pcb  phone_pcb.kicad_prl  phone_pcb.kicad_pro  phone_pcb.kicad_sch
phone/phone_pcb/mashed_carrots/: phone_pcb-B_Cu.gbl  phone_pcb-B_Mask.gbs  phone_pcb-B_Paste.gbp  phone_pcb-B_Silkscreen.gbo  phone_pcb-Edge_Cuts.gm1  phone_pcb-F_Cu.gtl  phone_pcb-F_Mask.gts  phone_pcb-F_Paste.gtp  phone_pcb-F_Silkscreen.gto  phone_pcb-NPTH-drl_map.gbr  phone_pcb-NPTH.drl  phone_pcb-PTH-drl_map.gbr  phone_pcb-PTH.drl
phone/phone_pcb/picknplaceyay/: phone_pcb-top-pos.csv
sketch_8mhz_clock/: sketch_8mhz_clock.ino
sketch_jun24a/: sketch_jun24a.ino
