[package]
name = "goertzel"
version = "0.1.0"
edition = "2021"

[patch.crates-io]
alsa-sys = { path = 'alsa-sys' }

[dependencies]
cpal = "0.15.3"
itertools = "0.13.0"
ringbuf = "0.4.1"
tokio = { version = "1.39.1", features = ["full"] }

[target.arm-unknown-linux-gnueabihf.dependencies]
rppal = "0.19.0"
