[package]
name = "goertzel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wav"
required-features = ["wav"]

[patch.crates-io]
alsa-sys = { path = 'alsa-sys' }

[dependencies]
cpal = "0.15.3"
itertools = "0.13.0"
ringbuf = "0.4.1"
tokio = { version = "1.39.1", features = ["full"] }
hound = { version = "3.5.1", optional = true }
pico-args = { version = "0.5.0", optional = true }
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
rsip = "0.4.0"
local-ip-address = "0.6.3"
md-5 = "0.10.6"
rand = "0.8.5"

[target.arm-unknown-linux-gnueabihf.dependencies]
rppal = "0.19.0"

[target.'cfg(not(target_os = "none"))'.dependencies]
ctrlc = "3.4.5"

[features]
wav = ["dep:hound", "dep:pico-args"]
wifi = []
