[package]
name = "goertzel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sender"

[[bin]]
name = "receiver"

[[bin]]
name = "wav"
required-features = ["wav"]

[[bin]]
name = "i16_audio"

[[bin]]
name = "ring"

[[bin]]
name = "tlser"

[[bin]]
name = "dialer"

[[bin]]
name = "dialed"

[patch.crates-io]
alsa-sys = { path = 'alsa-sys' }

[dependencies]
cpal = "0.15.3"
itertools = "0.13.0"
ringbuf = "0.4.1"
tokio = { version = "1.39.1", features = ["full"] }
hound = { version = "3.5.1", optional = true }
pico-args = { version = "0.5.0", optional = true }
tracing = { version = "0.1.40", features = ["max_level_trace", "release_max_level_trace"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "std"] }
rsip = "0.4.0"
local-ip-address = "0.6.3"
md-5 = "0.10.6"
sdp-rs = "0.2.1"
vec1 = "1.12.1"
rustls = "0.23.23"
webpki-roots = "1.0.2"
rand = { version = "0.9.2", features = ["thread_rng"] }
public-ip = { version = "0.2.2", default-features = false, features = ["opendns", "tokio-dns-resolver"] }
tokio-rustls = "0.26.2"
uuid = { version = "1.18.0", features = ["v4"] }

[target.arm-unknown-linux-gnueabihf.dependencies]
rppal = "0.19.0"

[target.'cfg(not(target_os = "none"))'.dependencies]
ctrlc = "3.4.5"

[features]
wav = ["dep:hound", "dep:pico-args"]
